[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Flor.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Flores.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Flores/junquillo_oloroso.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Flores/rosa.png" type="Texture" id=4]
[ext_resource path="res://Themes/Label.tres" type="Theme" id=5]
[ext_resource path="res://Media/flor_colocada.ogg" type="AudioStream" id=6]
[ext_resource path="res://Media/flor_quitada.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sprites/Flores/rosa_amarilla.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Flores/Crisantemo.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Flores/violetas.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Flores/pensamiento_malva.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Flores/Nomeolvides.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Flores/lirio_amarillo.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Flores/malva_real.png" type="Texture" id=14]
[ext_resource path="res://Themes/boton_vacio.tres" type="Theme" id=15]
[ext_resource path="res://Sprites/estanteria.png" type="Texture" id=16]
[ext_resource path="res://Sprites/boton_entregar.png" type="Texture" id=17]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 330.5, 85.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 77, 45 )

[node name="Flores" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.601845, 0.601845 )
texture = ExtResource( 16 )

[node name="Ramo" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 0.174
anchor_bottom = 1.0
margin_left = 179.0
margin_top = -101.0
margin_right = 240.44
margin_bottom = -5.0
mouse_filter = 2

[node name="Area2D" type="Area2D" parent="Ramo"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ramo/Area2D"]
position = Vector2( 246.5, 86.5 )
shape = SubResource( 2 )

[node name="FloresCont" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RosasRojas" type="Control" parent="FloresCont"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 202.0
margin_top = 136.0
margin_right = -1095.0
margin_bottom = -512.0
mouse_default_cursor_shape = 6
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Rosa"
}

[node name="TextureRect" type="TextureRect" parent="FloresCont/RosasRojas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = 40.5
margin_right = 17.0
margin_bottom = 194.5
rect_rotation = -87.8322
mouse_filter = 0
mouse_default_cursor_shape = 6
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Label" type="Control" parent="FloresCont/RosasRojas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="FloresCont/RosasRojas/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.0
margin_top = -178.0
margin_right = 73.0
margin_bottom = -48.0
rect_pivot_offset = Vector2( 40, 108 )
mouse_filter = 2
color = Color( 0.545098, 0.384314, 0.384314, 0.658824 )

[node name="LabelHover" type="Label" parent="FloresCont/RosasRojas/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -170.0
margin_right = 73.0
margin_bottom = -52.0
rect_pivot_offset = Vector2( 16, 91 )
theme = ExtResource( 5 )
text = "Rosas Rojas: Pasión, Belleza, Seguridad.
"
autowrap = true

[node name="RigidBody2D" type="RigidBody2D" parent="FloresCont/RosasRojas"]
mode = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloresCont/RosasRojas/RigidBody2D"]
position = Vector2( 72, 35 )
shape = SubResource( 1 )

[node name="RosasAmarillas" type="Control" parent="FloresCont"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 514.0
margin_top = 141.0
margin_right = -800.0
margin_bottom = -514.0
mouse_default_cursor_shape = 6
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="FloresCont/RosasAmarillas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = 28.0
margin_right = 39.0
margin_bottom = 171.0
rect_rotation = -84.4965
mouse_filter = 0
mouse_default_cursor_shape = 6
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="Label" type="Control" parent="FloresCont/RosasAmarillas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -23.0
margin_right = 20.0
margin_bottom = 17.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="FloresCont/RosasAmarillas/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.0
margin_top = -178.0
margin_right = 73.0
margin_bottom = -48.0
mouse_filter = 2
color = Color( 0.545098, 0.384314, 0.384314, 0.658824 )

[node name="LabelHover" type="Label" parent="FloresCont/RosasAmarillas/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -67.0
margin_top = -155.0
margin_right = 85.0
margin_bottom = -46.0
theme = ExtResource( 5 )
text = "Rosas Amarillas: Amor agonizante, celos, amistad."
autowrap = true

[node name="RigidBody2D" type="RigidBody2D" parent="FloresCont/RosasAmarillas"]
mode = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloresCont/RosasAmarillas/RigidBody2D"]
position = Vector2( 72, 25 )
shape = SubResource( 1 )

[node name="Crisantemos" type="Control" parent="FloresCont"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 816.0
margin_top = 143.0
margin_right = -486.0
margin_bottom = -507.0
mouse_default_cursor_shape = 6
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="FloresCont/Crisantemos"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -64.0
margin_right = 42.0
margin_bottom = 35.0
mouse_filter = 0
mouse_default_cursor_shape = 6
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Label" type="Control" parent="FloresCont/Crisantemos"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -22.0
margin_right = 6.0
margin_bottom = 18.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="FloresCont/Crisantemos/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.0
margin_top = -178.0
margin_right = 73.0
margin_bottom = -48.0
mouse_filter = 2
color = Color( 0.545098, 0.384314, 0.384314, 0.658824 )

[node name="LabelHover" type="Label" parent="FloresCont/Crisantemos/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -72.0
margin_top = -181.0
margin_right = 78.0
margin_bottom = -44.0
theme = ExtResource( 5 )
text = "Crisantemos: Eternidad, amor delicado, dolor por la pérdida de un ser querido."
autowrap = true

[node name="RigidBody2D" type="RigidBody2D" parent="FloresCont/Crisantemos"]
mode = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloresCont/Crisantemos/RigidBody2D"]
position = Vector2( 51, 20 )
shape = SubResource( 1 )

[node name="Violetas" type="Control" parent="FloresCont"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1102.0
margin_top = 136.0
margin_right = -214.0
margin_bottom = -517.0
mouse_default_cursor_shape = 6
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Rosa"
}

[node name="TextureRect" type="TextureRect" parent="FloresCont/Violetas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.0
margin_top = 32.5
margin_right = 17.0
margin_bottom = 173.5
rect_rotation = -82.0378
mouse_filter = 0
mouse_default_cursor_shape = 6
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="Label" type="Control" parent="FloresCont/Violetas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="FloresCont/Violetas/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.0
margin_top = -178.0
margin_right = 73.0
margin_bottom = -48.0
rect_pivot_offset = Vector2( 40, 108 )
mouse_filter = 2
color = Color( 0.545098, 0.384314, 0.384314, 0.658824 )

[node name="LabelHover" type="Label" parent="FloresCont/Violetas/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -166.0
margin_right = 84.0
margin_bottom = -9.0
rect_pivot_offset = Vector2( 16, 91 )
theme = ExtResource( 5 )
text = "Violetas: Confianza, encanto, fidelidad, deseo de amar."
autowrap = true

[node name="RigidBody2D" type="RigidBody2D" parent="FloresCont/Violetas"]
mode = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloresCont/Violetas/RigidBody2D"]
position = Vector2( 62, 33 )
shape = SubResource( 1 )

[node name="PensamientoMalva" type="Control" parent="FloresCont"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 302.0
margin_top = 311.0
margin_right = -1023.0
margin_bottom = -312.0
mouse_default_cursor_shape = 6
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Rosa"
}

[node name="TextureRect" type="TextureRect" parent="FloresCont/PensamientoMalva"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.5
margin_top = -59.5
margin_right = 59.5
margin_bottom = 41.5
mouse_filter = 0
mouse_default_cursor_shape = 6
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Label" type="Control" parent="FloresCont/PensamientoMalva"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="FloresCont/PensamientoMalva/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.0
margin_top = -178.0
margin_right = 73.0
margin_bottom = -48.0
rect_pivot_offset = Vector2( 40, 108 )
mouse_filter = 2
color = Color( 0.545098, 0.384314, 0.384314, 0.658824 )

[node name="LabelHover" type="Label" parent="FloresCont/PensamientoMalva/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -66.0
margin_top = -181.0
margin_right = 71.0
margin_bottom = -16.0
rect_pivot_offset = Vector2( 16, 91 )
theme = ExtResource( 5 )
text = "Pensamiento Malva: Nostalgia del amor perdido, te quiero de vuelta."
autowrap = true

[node name="RigidBody2D" type="RigidBody2D" parent="FloresCont/PensamientoMalva"]
mode = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloresCont/PensamientoMalva/RigidBody2D"]
position = Vector2( 55, 41 )
shape = SubResource( 1 )

[node name="NoMeOlvides" type="Control" parent="FloresCont"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 698.0
margin_top = 311.0
margin_right = -588.0
margin_bottom = -327.0
mouse_default_cursor_shape = 6
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="FloresCont/NoMeOlvides"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.0
margin_top = 24.0
margin_right = 30.0
margin_bottom = 162.0
rect_rotation = -77.0571
mouse_filter = 0
mouse_default_cursor_shape = 6
texture = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="Label" type="Control" parent="FloresCont/NoMeOlvides"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="FloresCont/NoMeOlvides/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.0
margin_top = -178.0
margin_right = 73.0
margin_bottom = -48.0
mouse_filter = 2
color = Color( 0.545098, 0.384314, 0.384314, 0.658824 )

[node name="LabelHover" type="Label" parent="FloresCont/NoMeOlvides/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -69.0
margin_top = -177.0
margin_right = 87.0
margin_bottom = -40.0
theme = ExtResource( 5 )
text = "No me olvides: Deseo de continuar junto a alguien pero tamien de marcharse."
autowrap = true

[node name="RigidBody2D" type="RigidBody2D" parent="FloresCont/NoMeOlvides"]
mode = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloresCont/NoMeOlvides/RigidBody2D"]
position = Vector2( 82, 25 )
shape = SubResource( 1 )

[node name="Lirios" type="Control" parent="FloresCont"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1065.0
margin_top = 293.0
margin_right = -260.0
margin_bottom = -321.0
mouse_default_cursor_shape = 6
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="FloresCont/Lirios"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.5
margin_top = -56.0
margin_right = 47.5
margin_bottom = 48.0
mouse_filter = 0
mouse_default_cursor_shape = 6
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="Label" type="Control" parent="FloresCont/Lirios"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -22.0
margin_right = 6.0
margin_bottom = 18.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="FloresCont/Lirios/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.0
margin_top = -178.0
margin_right = 73.0
margin_bottom = -48.0
mouse_filter = 2
color = Color( 0.545098, 0.384314, 0.384314, 0.658824 )

[node name="LabelHover" type="Label" parent="FloresCont/Lirios/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -68.0
margin_top = -180.0
margin_right = 66.0
margin_bottom = -43.0
theme = ExtResource( 5 )
text = "Lirios: Amarte me hace feliz, amor tierno, te quiero y confío en ti."
autowrap = true

[node name="RigidBody2D" type="RigidBody2D" parent="FloresCont/Lirios"]
mode = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloresCont/Lirios/RigidBody2D"]
position = Vector2( 43, 55 )
shape = SubResource( 1 )

[node name="JunquilloOloroso" type="Control" parent="FloresCont"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 427.0
margin_top = 478.0
margin_right = -857.0
margin_bottom = -159.0
mouse_default_cursor_shape = 6
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="FloresCont/JunquilloOloroso"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = 26.5
margin_right = 6.0
margin_bottom = 171.5
rect_rotation = -71.2966
mouse_filter = 0
mouse_default_cursor_shape = 6
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Label" type="Control" parent="FloresCont/JunquilloOloroso"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -13.5
margin_right = 26.0
margin_bottom = 26.5
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="FloresCont/JunquilloOloroso/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.0
margin_top = -178.0
margin_right = 73.0
margin_bottom = -48.0
mouse_filter = 2
color = Color( 0.545098, 0.384314, 0.384314, 0.658824 )

[node name="LabelHover" type="Label" parent="FloresCont/JunquilloOloroso/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -68.0
margin_top = -180.0
margin_right = 66.0
margin_bottom = -43.0
theme = ExtResource( 5 )
text = "Junquillo Oloroso: Deseo de que vuelva el afecto, te extraño."
autowrap = true

[node name="RigidBody2D" type="RigidBody2D" parent="FloresCont/JunquilloOloroso"]
mode = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloresCont/JunquilloOloroso/RigidBody2D"]
position = Vector2( 84, 40 )
shape = SubResource( 1 )

[node name="MalvaReal" type="Control" parent="FloresCont"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 938.0
margin_top = 475.0
margin_right = -330.0
margin_bottom = -153.0
rect_pivot_offset = Vector2( 48, -35 )
mouse_default_cursor_shape = 6
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="FloresCont/MalvaReal"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 43.0
margin_top = -75.0
margin_right = 139.0
margin_bottom = 73.0
rect_rotation = 66.4341
mouse_filter = 0
mouse_default_cursor_shape = 6
texture = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="Label" type="Control" parent="FloresCont/MalvaReal"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -22.0
margin_right = 6.0
margin_bottom = 18.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="FloresCont/MalvaReal/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.0
margin_top = -178.0
margin_right = 73.0
margin_bottom = -48.0
mouse_filter = 2
color = Color( 0.545098, 0.384314, 0.384314, 0.658824 )

[node name="LabelHover" type="Label" parent="FloresCont/MalvaReal/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -68.0
margin_top = -180.0
margin_right = 66.0
margin_bottom = -43.0
theme = ExtResource( 5 )
text = "Malva Real: Ambición, celos."
autowrap = true

[node name="RigidBody2D" type="RigidBody2D" parent="FloresCont/MalvaReal"]
mode = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloresCont/MalvaReal/RigidBody2D"]
position = Vector2( 79, 50 )
shape = SubResource( 1 )

[node name="Colocada" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Effects"

[node name="Quitada" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Effects"

[node name="Ayuda" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -368.0
margin_top = -115.0
margin_right = -18.0
theme = ExtResource( 5 )
text = "Ayuda:"
autowrap = true

[node name="Volver" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 51.0
margin_top = -106.0
margin_right = 1814.0
margin_bottom = 501.0
rect_scale = Vector2( 0.161683, 0.161683 )
theme = ExtResource( 15 )
icon = ExtResource( 17 )

[connection signal="body_entered" from="Ramo/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Ramo/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="mouse_entered" from="FloresCont/RosasRojas/TextureRect" to="FloresCont/RosasRojas" method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="FloresCont/RosasRojas/TextureRect" to="FloresCont/RosasRojas" method="_on_TextureRect_mouse_exited"]
[connection signal="mouse_entered" from="FloresCont/RosasAmarillas/TextureRect" to="FloresCont/RosasAmarillas" method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="FloresCont/RosasAmarillas/TextureRect" to="FloresCont/RosasAmarillas" method="_on_TextureRect_mouse_exited"]
[connection signal="mouse_entered" from="FloresCont/Crisantemos/TextureRect" to="FloresCont/Crisantemos" method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="FloresCont/Crisantemos/TextureRect" to="FloresCont/Crisantemos" method="_on_TextureRect_mouse_exited"]
[connection signal="mouse_entered" from="FloresCont/Violetas/TextureRect" to="FloresCont/Violetas" method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="FloresCont/Violetas/TextureRect" to="FloresCont/Violetas" method="_on_TextureRect_mouse_exited"]
[connection signal="mouse_entered" from="FloresCont/PensamientoMalva/TextureRect" to="FloresCont/PensamientoMalva" method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="FloresCont/PensamientoMalva/TextureRect" to="FloresCont/PensamientoMalva" method="_on_TextureRect_mouse_exited"]
[connection signal="mouse_entered" from="FloresCont/NoMeOlvides/TextureRect" to="FloresCont/NoMeOlvides" method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="FloresCont/NoMeOlvides/TextureRect" to="FloresCont/NoMeOlvides" method="_on_TextureRect_mouse_exited"]
[connection signal="mouse_entered" from="FloresCont/Lirios/TextureRect" to="FloresCont/Lirios" method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="FloresCont/Lirios/TextureRect" to="FloresCont/Lirios" method="_on_TextureRect_mouse_exited"]
[connection signal="mouse_entered" from="FloresCont/JunquilloOloroso/TextureRect" to="FloresCont/JunquilloOloroso" method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="FloresCont/JunquilloOloroso/TextureRect" to="FloresCont/JunquilloOloroso" method="_on_TextureRect_mouse_exited"]
[connection signal="mouse_entered" from="FloresCont/MalvaReal/TextureRect" to="FloresCont/MalvaReal" method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="FloresCont/MalvaReal/TextureRect" to="FloresCont/MalvaReal" method="_on_TextureRect_mouse_exited"]
[connection signal="button_down" from="Volver" to="." method="_on_Volver_button_down"]
